--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,30 +5,16 @@
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
-    "emitDecoratorMetadata": false,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strictPropertyInitialization": false,
-    "noImplicitAny": false,
-    "strictFunctionTypes": false,
-    "strictNullChecks": false,
-    "noPropertyAccessFromIndexSignature": false,
-    "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
     "importHelpers": true,
-    "noUnusedParameters": false,
-    "target": "esnext",
+    "target": "es2015",
     "module": "esnext",
-    "lib": ["es2019", "dom"],
+    "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@scrum/api/*": ["apps/api/src/app/*"],
-      "@scrum/shared/*": ["libs/shared/src/*"],
-      "@scrum/web/*": ["apps/web/src/app/*"]
-    }
+    "baseUrl": "./web",
+    "paths": {}
   },
-  "include": ["./libs/*/src/**/*", "./apps/*/src/**/*"],
   "exclude": ["node_modules", "tmp"]
 }
