--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,7 +13,7 @@
     "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "baseUrl": "./web",
+    "baseUrl": ".",
     "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
