--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/cli": "^9.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.18",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^9.0.0",
+    "bcrypt": "^5.0.1",
     "core-js": "^3.6.5",
+    "graphql": "^16.5.0",
+    "moment-timezone": "^0.5.34",
+    "nodemailer": "^6.7.7",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "pg": "^8.7.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
@@ -34,12 +48,23 @@
     "@nrwl/web": "14.4.2",
     "@nrwl/workspace": "14.4.2",
     "@testing-library/react": "13.3.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
+    "@types/nodemailer": "^6.4.4",
+    "@types/multer": "^1.4.7",
+    "@types/passport": "^1.0.9",
+    "@types/passport-jwt": "^3.0.6",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/pg": "^8.6.5",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "babel-jest": "27.5.1",
     "cypress": "^9.1.0",
     "eslint": "~8.15.0",
