--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,18 +7,28 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+		"strictPropertyInitialization": false,
+		"noImplicitAny": false,
+		"strictFunctionTypes": false,
+		"strictNullChecks": false,
+		"noPropertyAccessFromIndexSignature": false,
+		"suppressImplicitAnyIndexErrors": true,
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
     "importHelpers": true,
-    "target": "es2015",
+		"noUnusedParameters": false,
+    "target": "esnext",
     "module": "esnext",
-    "lib": ["es2017", "dom"],
+    "lib": ["es2019", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@scrum/shared": ["libs/shared/src/*"],
-      "@scrum/api": ["apps/api/src/app/*"],
-      "@scrum/web": ["apps/web/src/app/*"]
+      "@scrum/shared/*": ["libs/shared/src/*"],
+      "@scrum/api/*": ["apps/api/src/app/*"],
+      "@scrum/web/*": ["apps/web/src/app/*"]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp"],
+	"include": ["./libs/*/src/**/*", "./apps/*/src/**/*"]
 }
