--- a/package.json
+++ b/package.json
@@ -17,18 +17,25 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "bcrypt": "^5.0.1",
+    "chart.js": "^3.8.0",
     "core-js": "^3.6.5",
     "moment-timezone": "^0.5.34",
     "nodemailer": "^6.7.7",
     "mongoose": "^6.4.6",
+    "mongoose-autopopulate": "^0.16.1",
+    "mongoose-query-parser": "^1.3.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0",
+    "quill": "^1.3.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
