--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/mongoose": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "axios-observable": "^1.5.0",
     "bcrypt": "^5.0.1",
     "chart.js": "^3.8.0",
     "core-js": "^3.6.5",
@@ -31,6 +32,8 @@
     "primereact": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
@@ -63,6 +66,8 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
